--- a/weather/package.json
+++ b/weather/package.json
@@ -10,20 +10,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~53.0.12",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-native": "0.79.4",
-    "expo-router": "~5.1.0",
     "@expo/vector-icons": "^14.1.0",
-    "react-native-paper": "4.9.2",
-    "react-native-screens": "~4.11.1",
-    "react-native-reanimated": "~3.17.4",
     "@react-navigation/drawer": "*",
     "@react-navigation/native": "*",
-    "react-native-gesture-handler": "~2.24.0",
     "@react-navigation/native-stack": "*",
-    "react-native-safe-area-context": "5.4.0"
+    "expo": "~53.0.12",
+    "expo-router": "~5.1.0",
+    "expo-status-bar": "~2.2.3",
+    "lucide-react-native": "^0.522.0",
+    "react": "19.0.0",
+    "react-native": "0.79.4",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-paper": "4.9.2",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
