att footer + new pages

--- a/app.json
+++ b/app.json
@@ -24,6 +24,14 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      [
+        "expo-location",
+        {
+          "isAndroidBackgroundLocationEnabled": "Allow the APP to use your location."
+        }
+      ]
+    ]
   }
 }
