--- a/package.json
+++ b/package.json
@@ -11,22 +11,27 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-community/datetimepicker": "^7.5.0",
     "@react-navigation/drawer": "*",
     "@react-navigation/native": "*",
     "@react-navigation/native-stack": "*",
+    "dayjs": "^1.11.13",
     "expo": "~53.0.12",
     "expo-router": "~5.1.0",
     "expo-status-bar": "~2.2.3",
     "lucide-react-native": "^0.522.0",
     "react": "19.0.0",
     "react-native": "0.79.4",
+    "react-native-calendars": "^1.1299.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-paper": "4.9.2",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-ui-datepicker": "^3.1.2",
+    "react-native-vector-icons": "^10.2.0",
+    "expo-location": "~18.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
