--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-community/datetimepicker": "^7.5.0",
-    "@react-navigation/drawer": "*",
+    "@react-navigation/drawer": "^7.5.2",
     "@react-navigation/native": "*",
     "@react-navigation/native-stack": "*",
     "dayjs": "^1.11.13",
     "expo": "~53.0.12",
+    "expo-location": "~18.1.5",
     "expo-router": "~5.1.0",
     "expo-status-bar": "~2.2.3",
     "lucide-react-native": "^0.522.0",
@@ -30,8 +31,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-ui-datepicker": "^3.1.2",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-location": "~18.1.5"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
